--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <source src="./assets/The Chainsmokers - This Feeling ft. Kelsea Ballerini (Lyric Video).mp4" />
       </video>
 
-      <button>Play/Pause</button>
+      <button id="playButton">Play/Pause</button>
+      <button id="muteButton">Mute/Unmute</button>
     </main>
 
     <script type="module" src="./assets/index.js"></script>
