--- a/testing/prototype.html
+++ b/testing/prototype.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <a href="/testing/">Go Back</a>
-        <p><em>Abre la consoola</em></p>
+        <p><em>Abre la consola</em></p>
 
         <script>
             // Un objeto común y corriente
