--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <source src="./assets/The Chainsmokers - This Feeling ft. Kelsea Ballerini (Lyric Video).mp4"/>
       </video>
 
-      <button>Play/Pause</button>
+      <button id="playPause">Play/Pause</button>
+      <button id="muteUnmute">Mute/Unmute</button>
     </main>
     <script type="module" src="/assets/index.js"></script>
   </body>
